 - Added new porperty EdgeControlBase::HideEdgePointerOnVertexOverlap which can hide edge pointer on zero length edge
 - Added new property EdgeControlBase::HideEdgePointerByEdgeLength to be able to hide edge pointers if edge length is less than or equal to the specified value. Off by default (0 value).
 - Fixed incorrect edge pointer position on zero length edge
 - Fixed Avalon Dock interaction which caused strange exception by skipping ZooomControl viewfinder unnecessary refresh pass in some cases
 - Fixed edge label positioning, now it is more accurate for pathed edges
 - Fixed LinLog negative energy issue (thanks to Katya)
 - Fixed one vertex ISOM algorithm exception (thanks to jorgensigvardsson)
 - Fixed external alg vertex sizes grab logic (thanks to ValentinMarinov)
 - Made StateStorage class extensible by adding virtual modifiers to methods
 - Improved algorithm factory logic to avoid graph type cast exceptions in some class declaration cases
 - Moved code extensions to GraphX.PCL.Common library thus eliminating the need for GraphX.PCL.Logic for *.Controls libraries 
 - Removed GraphArea::EnableWinFormsHostingMode property as it is not needed any more. The WF checks has been automated.


RELEASE 2.3.4
DETAILED CHANGELOG:
 - Further improvements to printing logic. GraphArea::PrintDialog() method now takes print DPI as the first parameter and always fit content int page.

RELEASE 2.3.3
DETAILED CHANGELOG:
 - Exposed internal PrintHelper class with new CalculateEstimatedDPI() method which can calculate DPI required for image export based on specified criterias
 - Fixed arrows display issue when printing 

RELEASE 2.3.2
DETAILED CHANGELOG:
 - Added GraphArea::ExportAsImageDialog() method which act as old ExportAsImage and the ExportAsImage() method now accepts filename to work without the dialog

BREAKING CHANGES: