@@ -20,6 +20,7 @@ DETAILED CHANGELOG:
  - Added LogicCore::IsFiltered property to identify graph filtering state. If graph is filtered the filter results can be applied or popped back.
  - Added new porperty EdgeControlBase::HideEdgePointerOnVertexOverlap which can hide edge pointer on zero length edge
  - Added new property EdgeControlBase::HideEdgePointerByEdgeLength to be able to hide edge pointers if edge length is less than or equal to the specified value. Off by default (0 value).
+ - Fixed LogicCore::GetVertexSizeRectangles() method input params and description
  - Fixed incorrect edge pointer position on zero length edge
  - Fixed Avalon Dock interaction which caused strange exception by skipping ZooomControl viewfinder unnecessary refresh pass in some cases
  - Fixed edge label positioning, now it is more accurate for pathed edges
@@ -28,6 +29,7 @@ DETAILED CHANGELOG:
  - Fixed external alg vertex sizes grab logic (thanks to ValentinMarinov)
  - Made StateStorage class extensible by adding virtual modifiers to methods
  - Improved algorithm factory logic to avoid graph type cast exceptions in some class declaration cases
+ - Improved calc performance for large graphs that use both OR and ER algorithms
  - Moved code extensions to GraphX.PCL.Common library thus eliminating the need for GraphX.PCL.Logic for *.Controls libraries 
  - Removed GraphArea::EnableWinFormsHostingMode property as it is not needed any more. The WF checks has been automated.
 
